# archipelago

./: CHANGE_INDEX.md  DOCUMENTATION_GUIDE.md  FILE_INDEX.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  MCP_SERVERS.md  QUICK_REFERENCE.md  README_IMPLEMENTATION.md  SERVERS.md  SOLUTION_SUMMARY.md  VISUAL_SUMMARY.md
examples/hugging_face_task/: main.py  mcp_config_all_oss_servers.json
mcp_servers/edgar/: README.md  pyproject.toml
mcp_servers/edgar/mcp_servers/edgar_server/: main.py
mcp_servers/edgar/mcp_servers/edgar_server/tools/: get_company_info.py  get_filing.py  search_filings.py
mcp_servers/fmp/: README.md  pyproject.toml
mcp_servers/fmp/mcp_servers/fmp_server/: main.py
mcp_servers/fmp/mcp_servers/fmp_server/tools/: get_financial_metrics.py  get_market_data.py  get_stock_price.py
